Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116600

The Virtual keyboard is not hidden when the TextField loses focus on the Wayland client.

    XMLWordPrintable

Details

    • Linux/Wayland
    • 80c23a2a1 (dev), 7171c5fba (6.7), aa5336db6 (6.6), cf56bad47 (tqtc/lts-6.5)

    Description

      Steps to reproduce:

      1. Run wayland compositor
      2. Run IVI wayland client
      3. Click on the TextField in the wayland client
      4. Type something
      5. Click on the Button in the wayland client

      Expected result:
      The virtual keyboard should hide in step 5.

      Actual result:
      The virtual keyboard is not hidden.

      Sources and video in attach.

      Attachments

        1. Client_output.txt
          83 kB
        2. Compositor_and_Client.zip
          8 kB
        3. qtbug116600.tgz
          9 kB
        4. Vid.mp4
          8.77 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            inho Inho Lee
            evkolchin Evgenii Kolchin
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes